external-crates/move/crates/move-compiler/tests/development/enums/matching/nesting_defns.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/nesting_defns.move:2:17
  │
2 │     public enum X {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/nesting_defns.move:9:17
  │
9 │     public enum Y {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/nesting_defns.move:22:17
   │
22 │     public enum PE<T> {
   │                 ^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/nesting_defns.move:30:17
   │
30 │     public enum NPE<T> {
   │                 ^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

